--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Weather App
+        </title>
+        <link rel="stylesheet" href="./style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+       <div class="mainapp">
+            <div class="weatherapp">
+                <div class="heading-main">myWeatherApp</div>
+                <div class="searchbar">
+                    <input type="text" class="city-search">
+                    <button class="search-but">Search</button>
+                </div>
+            </div>
+       </div>
+       <script src="./script.js"></script>
+    </body>
+</html>
